<resources>
    <string name="app_name">CrypJoy</string>
    <string name="kindness_makes_the_world_a_better_place">Kindness makes the world a better place!</string>
    <string name="are_you_doing_something_nice_for_somebody_or_did_they_do_something_nice_for_you">Are you doing something nice for somebody or did they do something nice for you?</string>
    <string name="give_joy">GIVE JOY</string>
    <string name="get_joy">GET JOY</string>
    <string name="heart_icon">Heart Icon</string>
    <string name="yes">YES!</string>
    <string name="nope">Nope</string>
    <string name="give_joy_dialog">Give Joy</string>
    <string name="give_joy_dialog_body">Did you do something nice for somebody?</string>
    <string name="joy_given_confirm">JOY GIVEN!</string>
    <string name="joy_received_confirm">JOY RECEIVED!</string>
    <string name="get_joy_dialog">Get Joy</string>
    <string name="get_joy_dialog_body">Did somebody do something nice for you?</string>
    <string name="joy_given_small">Joy Given</string>
    <string name="joy_received_small">Joy Received</string>
    <string name="give_disabled_get_enabled">You\'ve reached your Give goal for now. Great job! You can do more if somebody does something nice for you.</string>
    <string name="give_enabled_get_disabled">Looks like you\'ve got some catching up to do!</string>
    <string name="give_disabled_get_disabled">Looks like you\'ve done all you can to make the world a better place today. You\'re awesome!</string>
    <string name="background_image">Background Image</string>
    <string name="welcome_filler">Welcome back, John! Let\'s see how we\'re doing today.</string>
    <string name="pay_it_forward_label">PAY IT FORWARD</string>
    <string name="progress_background">Progress Background</string>
    <string name="joy_given_label">JOY GIVEN</string>
    <string name="joy_received">JOY RECEIVED</string>
    <string name="payItForward_display_placeholder">0/0</string>
    <string name="joyReceived_display_placeholder">0</string>
    <string name="joyGiven_display_placeholder">2/3</string>
    <string name="lifetime">LIFETIME</string>
    <string name="lifetime_header">Here’s a look at how’ve you done overall. Great job!</string>
    <string name="lifetime_joy_received">Lifetime Joy Received</string>
    <string name="display_lifetime_received_placeholder">22</string>
    <string name="display_lifetime_given_placeholder">37</string>
    <string name="lifetime_joy_given">Lifetime Joy Given</string>
    <string name="lifetime_joy_paid_forward">Lifetime Joy Paid Forward</string>
    <string name="display_lifetime_payItForward_placeholder">17</string>
    <string name="daily">DAILY</string>
    <string name="map">Map</string>
    <string name="date_placeholder">2/17/19</string>
    <string name="time_placeholder">8:07 AM</string>
    <string name="ok">Ok</string>
    <string name="location_permissions_required">Location Permissions Required</string>
    <string name="cryp">Cryp</string>
    <string name="joy">Joy</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="let_s_make_one">LET\'S MAKE ONE!</string>
    <string name="hey_there_let_s_start_with_some_basic_information">Hey there! Let’s start with some basic information.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cancel">CANCEL</string>
    <string name="next">NEXT</string>
    <string name="hey_john_now_let_s_finish_up_easy_right">Hey, John! Now, let’s finish up. Easy, right?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_instructions">Your password should be at least 6 characters long and contain a mix of letters and numbers</string>
    <string name="finish">FINISH</string>
    <string name="password_rules">At least 6 characters, mix of letters and numbers</string>
    <string name="invalid_input">Hmmm. Something doesn\'t look right...</string>
    <string name="password_match_rules">Your passwords don\'t match</string>
    <string name="invalid_user">Looks like you might need to check your e-mail or password and try again...</string>
    <string name="account_create_fail">There was a bit of trouble creating your account. Can we try again later?</string>
    <string name="logout">Logout</string>
    <string name="welcome_back1">Welcome back,</string>
    <string name="welcome_back2">! Let\'s see how we\'re doing today.</string>
    <string name="forgot_password">forgot password?</string>
    <string name="forgot_password_instructions">Forgot your password, huh? Not a problem. Enter your e-mail and we\'ll send you a reset link. :-)</string>
    <string name="send">SEND</string>
    <string name="reset_email_sent">If an account exists for this e-mail address, you\'ll receive a reset link shortly</string>
    <string name="welcome1">Hey,</string>
    <string name="welcome2">! Now, let\'s finish up. Easy right?</string>
</resources>
